lib_LIBRARIES = \
	libminiupnpc.a

libminiupnpc_a_SOURCES = \
	miniupnpc.h \
	miniwget.h \
	upnpcommands.h \
	igd_desc_parse.h \
	upnpreplyparse.h \
	upnperrors.h \
	miniupnpctypes.h \
	portlistingparse.h \
	declspec.h \
	igd_desc_parse.c \
	miniupnpc.c \
	minixml.c \
	minisoap.c \
	miniwget.c \
	upnpcommands.c \
	upnpreplyparse.c \
	minixmlvalid.c \
	minissdpc.c \
	upnperrors.c \
	connecthostport.c \
	portlistingparse.c \
	receivedata.c

libminiupnpc_a_CXXFLAGS = \
	-std=c++11
